Updated files to fix image flicker bug.

--- a/src/index.css
+++ b/src/index.css
@@ -105,11 +105,6 @@ select {
   flex-grow: 1;
 }
 
-select {
-  width: 20em;
-  height: 3em;
-}
-
 /* div {
   border: 1px solid red;
 } */
